<resources>
    <string name="app_name">AplicationTestingLayout</string>
    <string name="digite_o_titulo_da_tarefa">Titulo da tarefa</string>
    <string name="data">/ Data /</string>
    <string name="hora">Hora</string>
    <string name="descri_o_da_tarefa">Descrição da tarefa</string>
    <string name="geometric_background">Geometric Background</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="Cadastro">Cadastre-se</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>