<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/primeiroBack">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/geometric_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backtest2" />

    <View
        android:id="@+id/center_view"
        style="@style/ContainerComponents"
        android:layout_width="0dp"
        android:layout_height="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.533" />

    <EditText
        android:id="@+id/userName"
        style="@style/inputTextLogin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nome_de_usu_rio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#aeaeae"
        android:padding="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/center_view" />

    <EditText
        android:id="@+id/nomeCompleto"
        style="@style/inputTextLogin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textColorHint="#aeaeae"
        android:padding="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/center_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/CadButton"
        style="@style/buttonLogin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/login"
        android:textColor="#F8F5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeCompleto" />

    <TextView
        android:id="@+id/CadastrarButton"
        style="@style/buttonCad"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Cadastro"
        android:textColor="#F8F5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/center_view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="204dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/center_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/testeee" />


</androidx.constraintlayout.widget.ConstraintLayout>