<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout"
    >

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/geometric_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backtest2" />

    <View
        android:id="@+id/cont"
        style="@style/ContainerComponents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="37dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view3"
        style="@style/CenterButtonsForm"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cont" />

    <View
        android:id="@+id/view7"
        style="@style/CenterButtonsForm"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view8"
        style="@style/CenterButtonsForm"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <View
        android:id="@+id/form_box"
        style="@style/Subcentro"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <EditText
        android:id="@+id/taskTitleForm"
        style="@style/TextInput"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/digite_o_titulo_da_tarefa"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#F4F4F4"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/form_box"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toTopOf="@+id/form_box" />

    <EditText
        android:id="@+id/inputData"
        style="@style/TextInput"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_calendario"
        android:fontFamily="@font/open_sans"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="#FFFDFD"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toBottomOf="@+id/descricaoTask" />

    <EditText
        android:id="@+id/inputHora"
        style="@style/TextInput"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:drawableStart="@drawable/ic_clockwhite"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hora"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="#FAF7F7"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/form_box"
        app:layout_constraintTop_toBottomOf="@+id/descricaoTask" />

    <EditText
        android:id="@+id/descricaoTask"
        style="@style/TextInput"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/descri_o_da_tarefa"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#FAF6F6"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/form_box"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleForm" />

    <Button
        android:id="@+id/BotaoSalvarTarefa"
        style="@style/botãoSalvareCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/salvar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/cont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_box" />

    <Button
        android:id="@+id/BotaoCancelarTarefa"
        style="@style/botãoSalvareCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/cancelar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/cont"
        app:layout_constraintEnd_toEndOf="@+id/cont"
        app:layout_constraintTop_toBottomOf="@+id/form_box" />

</androidx.constraintlayout.widget.ConstraintLayout>