<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrationTask_fragment"
    android:background="@drawable/gradient_list">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/geometric_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backtest2" />

    <View
        android:id="@+id/cont"
        style="@style/ContainerComponents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="335dp"
        android:layout_height="280dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/cont">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="600dp"
                    android:layout_height="85dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/selectbuttons_bg_habito">

                    <RadioButton
                        android:id="@+id/buttonHabito"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/selectbuttons_bg_white_set"
                        android:fontFamily="@font/open_sans"
                        android:text="            Tarefas diarias que quero adotar             como hábito duradouro!"
                        android:textAlignment="center"
                        android:textColor="#6C6B6B"
                        android:textSize="15dp" />

                    <RelativeLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="1dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/selectbuttons_bg_habito">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            app:srcCompat="@drawable/habito"
                            app:tint="#fff" />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="600dp"
                    android:layout_height="85dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/selectbuttons_bg_meta">

                    <RadioButton
                        android:id="@+id/buttonMeta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/selectbuttons_bg_white_set"
                        android:fontFamily="@font/open_sans"
                        android:text="         Se você procura um desafio,                         esta é a opção correta!"
                        android:textAlignment="center"
                        android:textColor="#6C6B6B"
                        android:textSize="15dp" />

                    <RelativeLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="1dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/selectbuttons_bg_meta">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="14dp"
                            app:srcCompat="@drawable/goal"
                            app:tint="#fff" />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="600dp"
                    android:layout_height="85dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/selectbuttons_bg_tarefa">

                    <RadioButton
                        android:id="@+id/buttonTarefa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/selectbuttons_bg_white_set"
                        android:checked="true"
                        android:fontFamily="@font/open_sans"
                        android:text="          Tarefas rápidas do seu                  dia a dia!"
                        android:textAlignment="center"
                        android:textColor="#6C6B6B"
                        android:textSize="15dp" />

                    <RelativeLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="1dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/selectbuttons_bg_tarefa">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            app:srcCompat="@drawable/clipboards"
                            app:tint="#fff" />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

    </RadioGroup>

    <View
        android:id="@+id/form_box"
        style="@style/Subcentro"
        android:layout_width="340dp"
        android:layout_height="245dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskTitleFormLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="Titulo"
        app:layout_constraintEnd_toEndOf="@+id/form_box"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toTopOf="@+id/form_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskTitleForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDataLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/data"
        app:layout_constraintBottom_toBottomOf="@id/form_box"
        app:layout_constraintEnd_toStartOf="@id/imputHoraLayout"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toBottomOf="@id/descricaoTaskLayout"
        app:startIconDrawable="@drawable/ic_calendario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descricaoTaskLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/descri_o_da_tarefa"
        app:layout_constraintEnd_toEndOf="@+id/form_box"
        app:layout_constraintStart_toStartOf="@+id/form_box"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleFormLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descricaoTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="top|start"
            android:inputType="textMultiLine|text"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputHoraLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:hint="Hora"
        app:layout_constraintBottom_toBottomOf="@id/form_box"
        app:layout_constraintEnd_toEndOf="@id/form_box"
        app:layout_constraintStart_toEndOf="@id/inputDataLayout"
        app:layout_constraintTop_toTopOf="@id/inputDataLayout"
        app:startIconDrawable="@drawable/ic_clock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imputHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BotaoSalvarTarefa"
        style="@style/botãoSalvareCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="5dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="@+id/cont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_box"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/BotaoCancelarTarefa"
        style="@style/botãoSalvareCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="64dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/cont"
        app:layout_constraintEnd_toEndOf="@+id/cont"
        app:layout_constraintTop_toBottomOf="@+id/form_box"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>